--- a/bank-management-system/nbproject/project.properties
+++ b/bank-management-system/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=bank-management-system
-main.class=bank.management.system.BankManagementSystem
+main.class=bank.management.system.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
